# simple_sql_lineage

./: .env-template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
log/: logs_here.txt
simple_lineage_generator/: simple_lineage_generator.py
simple_lineage_generator/lineage_runner/: my_lineage_runner.py
simple_lineage_generator/utils/: clear_query.py
